tests/negative/symbols/uppercase_value.orng
// uppercase_value.orng:6:10: error: symbol `X` must start with an lowercase letter
//     let X = 4
//         ^
// 
fn main() -> Int {
    let X = 4
    X
}